# LLMSat

./: .env.example  .gitignore  LICENSE  README.md  history.txt  launch.bat  modlist.txt  modpack.ckan  pyproject.toml  raw.txt  test.py  tool_decorator_patch.txt  transcript.txt  trascript.txt
data/: active_satellites_chart_generator copy.ipynb  active_satellites_chart_generator.ipynb
data/solar_system_probe_data/: 1_Merged_Solar_System_Probes.csv  2_Solar_System_Probes_No_Data.csv  3_Solar_System_Probes_No_Spacecraf1.csv  4_Solar_System_Probes_Deduplicated.csv  5_Solar_System_Probes_Launches.csv  5_Solar_System_Probes_with_Launches.csv
diagrams/: project-history.md  project-timeline.md  sequence-diagrams.md  state-diagram copy.md  state-diagram.md
disk/: comm_log.json  mission.md  requirements.json
llmsat/: agent_manager.py  app.py  app_config.json  appconfig.json  console.py  main.py  main_ai.py  main_old.py  mission-brief.json  mission_brief.md  mock_controller.py  prompt.py  prompts.json  run_sim.py  stktest.py  tasks_file.json  test_config.cfg  tooltest.py  utils.py
llmsat/components/: __init__.py  adcs.py  adcs_ksp.py  alarm_manager.py  autopilot.py  autpilot.py  bidirectional_comm.py  comms.py  comms_ksp.py  comms_service.py  console.py  eps.py  eps_ksp.py  experiment_manager.py  llm.py  obc.py  obc_ksp.py  orbit_propagator.py  payload.py  payload_ksp.py  remote_sensing_manager.py  science_manager.py  sim_service.py  spacecraft_manager.py  task_manager.py  task_manager_cmd2.py  test.json
llmsat/config/: scenario.json  spacecraft.json
llmsat/libs/: krpc_types.py  utils.py
missions/: altimetry_scan.md  hibernate.md  sample_return.md  temperature_reading.md  temperature_reading_advanced.md  unachievable_goal.md
scenarios/mars/: Satellite1.sa3  mars STK ScenarioWB.wsp  mars STK ScenarioWB.wsptb  mars.sc  mars.sc3  marsTimelinePrefs.xml
scripts/: convo_to_latex.py  input.txt  output.tex
tests/components_tests/: sim_service_tests.py  test_alarm_manager.py  test_autopilot_service.py  test_eps_ksp.py  test_experiment_manager.py  test_obc_ksp.py  test_orbit_propagator.py  test_remote_sensing_manager.py  test_sim_service.py  test_spacecraft_manager.py  test_task_manager.py
(+29 files in other folders)
