[tool.poetry]
name = "llmsat"
version = "0.1.0"
description = "An LLM-based autonomous agent for space exploration"
authors = ["David Maranto <D.Maranto1122@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-decouple = "^3.8"
pydantic = "^2.3.0"
pytest = "^7.4.1"
astropy = "^5.3.2"
krpc = "^0.5.3"
cmd2 = "^2.4.3"
argdantic = "^1.0.0"
docopt = "^0.6.2"
openai = "^1.3.3"
pexpect = "^4.8.0"
wexpect = "^4.0.0"
pandas = "^2.1.3"
ipykernel = "^6.28.0"
plotly = "^5.18.0"
langchain = "^0.1.0"
langchain-openai = "^0.0.5"
nbformat = "^5.9.2"
beartype = "^0.17.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
indent-width = 4
extend-include = ["*.ipynb"]

[tool.ruff.lint]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"
